// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionDetail should render 1`] = `
<div>
  <div
    class="flex items-center py-4 border-t border-dashed border-theme-neutral-300 "
  >
    <div
      class="flex-1"
    >
      <div
        class="text-sm font-semibold text-theme-neutral-500"
      >
        Test
      </div>
      <div
        class="mt-2 font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail should render without border 1`] = `
<div>
  <div
    class="flex items-center py-4 true "
  >
    <div
      class="flex-1"
    >
      <div
        class="text-sm font-semibold text-theme-neutral-500"
      >
        Test
      </div>
      <div
        class="mt-2 font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;

exports[`TransactionDetail should render without padding 1`] = `
<div>
  <div
    class="flex items-center true border-t border-dashed border-theme-neutral-300 "
  >
    <div
      class="flex-1"
    >
      <div
        class="text-sm font-semibold text-theme-neutral-500"
      >
        Test
      </div>
      <div
        class="mt-2 font-semibold"
      >
        test
      </div>
    </div>
  </div>
</div>
`;
